force-app/main/default/objects/AgentGov_Alert__e/AgentGov_Alert__e.object-meta.xml
<CustomObject>
    <description>Fires when an agent crosses a governor limit threshold (warning, throttle, or block).</description>
    <label>AgentGov Alert</label>
    <pluralLabel>AgentGov Alerts</pluralLabel>
</CustomObject>