force-app/main/default/objects/AgentGov_Alert__e/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <label>Agent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>