force-app/main/default/objects/AgentGov_Alert__e/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <description>Warning, Throttle, or Block</description>
    <label>Alert Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>