force-app/main/default/objects/AgentGov_Alert__e/fields/Budget_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocated__c</fullName>
    <label>Budget Allocated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>