force-app/main/default/objects/AgentGov_Alert__e/fields/Current_Usage__c.field-meta.xml
<CustomField>
    <fullName>Current_Usage__c</fullName>
    <label>Current Usage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>