force-app/main/default/objects/AgentGov_Alert__e/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>API_Calls, SOQL_Queries, or DML_Operations for a budget alert; Circuit_Breaker when a circuit breaker tripped, in which case Current Usage is the failure count and Budget Allocated the failure threshold.</description>
    <label>Limit Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>