force-app/main/default/objects/AgentGov_Alert__e/fields/Usage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percentage__c</fullName>
    <label>Usage Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>